# onroad-car-detection-tracking

./: .gitignore
classes/exercises02/adding_two_images/: main.cpp
classes/exercises02/contrast_brightness/: main.cpp
classes/exercises02/load_modify_save/: main.cpp
classes/exercises03/a4_filters/: main.cpp
classes/exercises03/a6_histogram_normalization/: main.cpp
classes/exercises03/a7_similar_histograms/: main.cpp
classes/exercises04/a1_a2_sobel_scharr_laplacian/: main.cpp
classes/exercises04/a4_cornerHarris/: CMakeLists.txt
classes/exercises05/camera_calibration/: CamParams.xml  chessboard.cpp  load_cube.cpp
classes/exercises05/camera_calibration_original/: CMakeLists.txt  chessboard.cpp
classes/exercises05/camera_calibration_simulated/: CamParams.xml  (+1 more)
classes/standard_test_images/: winchester.tiff
onroad-vehicle/: CMakeLists.txt
onroad-vehicle/haar_cascades/downloaded/: dataset_sources.csv
onroad-vehicle/haar_cascades/trained/: README
onroad-vehicle/haar_cascades/trained/dataset_32/: bg.txt
onroad-vehicle/haar_cascades/trained/dataset_32/data01_haar_05/: stage0.xml  stage2.xml  stage4.xml  stage6.xml  stage7.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data02_haar_05/: stage0.xml  stage3.xml  stage4.xml  stage5.xml  stage7.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data03_00003_500/: stage1.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data04_haar_02_3000/: cascade.xml  params.xml  stage1.xml  stage4.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data05_lbp_05_200/: stage0.xml  stage1.xml  stage4.xml  stage6.xml  stage7.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data06_lbp_05/: stage1.xml  stage2.xml  stage5.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data07_haar_05_2000_2500/: stage0.xml  stage2.xml  stage4.xml  stage6.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data08_lbp_05_3000_2000/: stage0.xml  stage2.xml  stage4.xml  stage5.xml  stage6.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data09_haar_05_500_500/: cascade.xml  params.xml  stage0.xml  stage5.xml  stage6.xml  stage7.xml
onroad-vehicle/haar_cascades/trained/dataset_32/data10_haar_05_100_50/: stage0.xml  stage2.xml  stage4.xml  stage6.xml  stage9.xml
onroad-vehicle/haar_cascades/trained_results/: data01_haar_05.xml  data02_haar_05.xml  data05_lbp_05_200.xml  data07_haar_05_2000_2500.xml  data08_lbp_05_3000_2000.xml
onroad-vehicle/source_code/: CMakeLists.txt  camshift.cpp  detection_road.cpp  obtain_samples.cpp  raw_cascade.cpp  tracker.cpp  tracker_alternative.cpp  tracker_alternative_tld.cpp
onroad-vehicle/source_code/trackers/: MultiTrackerOpenCV.cpp  MultiTrackerOpenCV.h  TrackerOpenTLD.cpp
src/classes/exercises05/camera_calibration/: CMakeLists.txt  CamParams.xml  chessboard.cpp  load_cube.cpp
src/classes/exercises06/stereoVision/: CMakeLists.txt  CamParams.xml  calibrate.cpp  chessboard.cpp  epipolarLines.cpp  rectification.cpp  undistort.cpp
src/classes/exercises07/src/: CMakeLists.txt  pcl_io.cpp  reconstruct.cpp  viewcloudfile.cpp  viewcloudicp.cpp  viewreconstruct.cpp
src/classes/exercises09/motion/: CMakeLists.txt  farneback.cpp  foregroundDetection.cpp  tracker.cpp
src/classes/exercises10/face/: CMakeLists.txt  data.csv  face_crop_from_image.cpp  face_crop_from_video.cpp  face_recognizer.cpp  labels.csv
src/classes/exercises10/object_detection/: CMakeLists.txt  match_template.cpp
src/classes/exercises11/src/: CMakeLists.txt  hough_representation.cpp  houghmain.cpp  siftExample.cpp
src/onroad-vehicle/: CMakeLists.txt  DetectorHaarCascade.cpp  DetectorHaarCascade.h  DetectorMatchingFeatures.cpp  FilterFalsePositives.cpp  FilterFalsePositives.h  Helper.cpp  MultiTrackerOpenCV.cpp  MultiTrackerOpenCV.h  MultiTrackerOpenTLD.cpp  MultiTrackerOpenTLD.h  TrackerOpenTLD.cpp  TrackerOpenTLD.h  backgroundSubLowHistory.py  detection.cpp  false_positives.cpp  main.cpp  main_new_tracker.cpp  obtain_samples.cpp  raw_cascade.cpp  tracker.cpp  tracker_alternative.cpp
src/onroad-vehicle/haar_cascades/: README
src/onroad-vehicle/haar_cascades/downloaded/: cars8.xml  dataset_sources.csv
src/onroad-vehicle/haar_cascades/trained/carTracking/: detect.py
src/onroad-vehicle/haar_cascades/trained/dataset/: bg.txt  cars.info
src/onroad-vehicle/haar_cascades/trained/dataset_32/: car.vec  cars.info  train.sh
src/onroad-vehicle/haar_cascades/trained/dataset_32/data01_haar_05/: cascade.xml  stage1.xml  stage3.xml  stage5.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data02_haar_05/: cascade.xml  params.xml  stage1.xml  stage2.xml  stage6.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data03_00003_500/: params.xml  stage0.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data04_haar_02_3000/: stage0.xml  stage2.xml  stage3.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data05_lbp_05_200/: cascade.xml  stage2.xml  stage3.xml  stage5.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data06_lbp_05/: cascade.xml  stage0.xml  stage3.xml  stage4.xml  stage6.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data07_haar_05_2000_2500/: cascade.xml  stage1.xml  stage3.xml  stage5.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data08_lbp_05_3000_2000/: cascade.xml  stage1.xml  stage3.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data09_haar_05_500_500/: stage1.xml  stage2.xml  stage3.xml  stage4.xml
src/onroad-vehicle/haar_cascades/trained/dataset_32/data10_haar_05_100_50/: cascade.xml  stage1.xml  stage3.xml  stage5.xml  stage7.xml  stage8.xml
src/onroad-vehicle/haar_cascades/trained_results/: data04_haaar_02_3000.xml  data06_lbp_05.xml  data09_haar_05_500_500.xml  data10_haar_05_100_50.xml
src/onroad-vehicle/source_code/: detection_haar.cpp
src/onroad-vehicle/source_code/detectors/: DetectorHaarCascade.h  DetectorMatchingFeatures.h
src/onroad-vehicle/source_code/extra/: FilterFalsePositives.h  Helper.h
src/onroad-vehicle/source_code/trackers/: MultiTrackerOpenCV.cpp  MultiTrackerOpenTLD.h  TrackerOpenTLD.h
(+37 files in other folders)
