CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( view )
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( PCL 1.2 REQUIRED )
FIND_PACKAGE(VTK REQUIRED)

set(dir ${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/build")

file(GLOB JPG "${CMAKE_CURRENT_SOURCE_DIR}/../images/*.jpg")
file(GLOB BMP "${CMAKE_CURRENT_SOURCE_DIR}/../images/*.bmp")
file(GLOB PCD "${CMAKE_CURRENT_SOURCE_DIR}/../pcl_images/*.pcd")

file(COPY ${BMP} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY ${JPG} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY ${PCD} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

ADD_EXECUTABLE( reconstruct reconstruct.cpp )
ADD_EXECUTABLE( viewCloud viewcloud.cpp )
ADD_EXECUTABLE( viewOpenni pcl_io.cpp )

include_directories( ${PCL_INCLUDE_DIRS} )
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

TARGET_LINK_LIBRARIES( reconstruct ${OpenCV_LIBS} )
TARGET_LINK_LIBRARIES( viewCloud ${PCL_LIBRARIES} ${VTK_LIBRARIES})
TARGET_LINK_LIBRARIES( viewOpenni ${OpenCV_LIBS} ${PCL_LIBRARIES} )

